Use bulma css classes for spacing elements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,12 @@
     <title>Bulma_CSS_Project</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
+
 <body>
 
-<!-- Fonts -->
+    <!-- Fonts -->
 
-    <h1 class="is-size-1 has-text-centered">Hello, Bulma</h1>
+    <!-- <h1 class="is-size-1 has-text-centered">Hello, Bulma</h1>
     <h2 class="is-size-2 has-text-right">Hello, Bulma</h2>
     <h3 class="is-size-3 has-text-left">Hello, Bulma</h3>
     <h4 class="is-size-4">Hello, Bulma</h4>
@@ -30,17 +32,51 @@
 
 <!-- / Fonts -->
 
-<!-- Colors -->
+    <!-- Colors -->
 
-    <p class="has-text-primary has-background-light">I`m primary text</p>
+    <!-- <p class="has-text-primary has-background-light">I`m primary text</p>
     <p class="has-text-warning-dark has-background-danger-dark">I`m warning text</p>
     <p class="has-text-danger">I`m danger text</p>
     <p class="has-text-success">I`m success text</p>
     <p class="has-text-dark">I`m dark text</p>
     <p class="has-text-light">I`m light text</p>
-    <p class="has-text-info">I`m info text</p>
+    <p class="has-text-info">I`m info text</p> -->
 
-<!-- Colors -->
+    <!-- Colors -->
+
+    <!-- Spacing -->
+
+    <!-- 
+    py - padding along the axis y
+    px - padding along the axis x
+    pt, pr, pb, pl - padding top, right, bottom, left
+
+    my - margin along the axis x
+    mx - margin along the axis y
+    mt, mr, mb, ml - margin top, right, bottom, left
     
+ -->
+
+    <h1 class="py-6 mx-6">Hello, Bulma</h1>
+    <h1 class="py-4 mx-1 my-2">Hello, Bulma</h1>
+    <h1 class="mt-6">Hello, Bulma</h1>
+
+    <section class="section">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam neque architecto libero dicta beatae
+            molestiae corporis dolor placeat eveniet. Similique voluptate accusantium est, facilis neque fugiat aut.
+            Iusto, nobis temporibus!</p>
+    </section>
+
+    <div class="section">
+        <div class="container">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, ipsum quo accusamus dignissimos perspiciatis
+            officiis? Veritatis hic temporibus sapiente odio, illum blanditiis dolores, tempora rerum animi porro
+            voluptatibus id? Alias.</p>
+        </div>
+    </div>
+
+    <!-- / Spacing -->
+
 </body>
+
 </html>
