Use bulma css classes for navbar desktop

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
  -->
 
-    <h1 class="py-6 mx-6">Hello, Bulma</h1>
+    <!-- <h1 class="py-6 mx-6">Hello, Bulma</h1>
     <h1 class="py-4 mx-1 my-2">Hello, Bulma</h1>
     <h1 class="mt-6">Hello, Bulma</h1>
 
@@ -73,9 +73,31 @@
             officiis? Veritatis hic temporibus sapiente odio, illum blanditiis dolores, tempora rerum animi porro
             voluptatibus id? Alias.</p>
         </div>
-    </div>
+    </div> -->
 
     <!-- / Spacing -->
+
+
+    <!-- Navbar -->
+
+        <nav class="navbar has-shadow is-white">
+            <!-- logo / brand -->
+            <div class="navbar-brand">
+                <a class="navbar-item"> 
+                    <img src="./common/53b4428cef245.80.jpg" alt="site logo" style="max-height: 70px" class="px-2 py-2">
+                </a>
+            </div>
+
+
+            <div class="navbar-menu" id="nav-links">
+                <div class="navbar-end">
+                    <a class="navbar-item">My Account</a>
+                    <a class="navbar-item">Shopping Cart (0)</a>
+                </div>
+            </div>
+        </nav>
+
+    <!-- / Navbar -->
 
 </body>
 
