Use bulma css classes for navbar mobile

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                 <a class="navbar-item"> 
                     <img src="./common/53b4428cef245.80.jpg" alt="site logo" style="max-height: 70px" class="px-2 py-2">
                 </a>
+                <a class="navbar-burger" id="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
             </div>
 
 
@@ -99,6 +104,7 @@
 
     <!-- / Navbar -->
 
+    <script src="./index.js"></script>
 </body>
 
-</html>
+</html> 
