Use bulma css classes for navbar breadcrumbs. Change html files.

--- a/index.html
+++ b/index.html
@@ -11,73 +11,6 @@
 
 <body>
 
-    <!-- Fonts -->
-
-    <!-- <h1 class="is-size-1 has-text-centered">Hello, Bulma</h1>
-    <h2 class="is-size-2 has-text-right">Hello, Bulma</h2>
-    <h3 class="is-size-3 has-text-left">Hello, Bulma</h3>
-    <h4 class="is-size-4">Hello, Bulma</h4>
-    <h5 class="is-size-5">Hello, Bulma</h5>
-    <h5 class="is-size-6">Hello, Bulma</h5>
-    <h6 class="is-size-7">Hello, Bulma</h6>
-
-    <p class="is-size-4 is-uppercase is-italic">Hello, again</p>
-    <p class="is-lowercase">Hello, again</p>
-    <p class="has-text-weight-bold">Hello, again</p>
-    <p class="has-text-weight-light">Hello, again</p>
-
-
-    <h2 class="title">Title</h2>
-    <h3 class="subtitle">Subtitle</h3>
-
-<!-- / Fonts -->
-
-    <!-- Colors -->
-
-    <!-- <p class="has-text-primary has-background-light">I`m primary text</p>
-    <p class="has-text-warning-dark has-background-danger-dark">I`m warning text</p>
-    <p class="has-text-danger">I`m danger text</p>
-    <p class="has-text-success">I`m success text</p>
-    <p class="has-text-dark">I`m dark text</p>
-    <p class="has-text-light">I`m light text</p>
-    <p class="has-text-info">I`m info text</p> -->
-
-    <!-- Colors -->
-
-    <!-- Spacing -->
-
-    <!-- 
-    py - padding along the axis y
-    px - padding along the axis x
-    pt, pr, pb, pl - padding top, right, bottom, left
-
-    my - margin along the axis x
-    mx - margin along the axis y
-    mt, mr, mb, ml - margin top, right, bottom, left
-    
- -->
-
-    <!-- <h1 class="py-6 mx-6">Hello, Bulma</h1>
-    <h1 class="py-4 mx-1 my-2">Hello, Bulma</h1>
-    <h1 class="mt-6">Hello, Bulma</h1>
-
-    <section class="section">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam neque architecto libero dicta beatae
-            molestiae corporis dolor placeat eveniet. Similique voluptate accusantium est, facilis neque fugiat aut.
-            Iusto, nobis temporibus!</p>
-    </section>
-
-    <div class="section">
-        <div class="container">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, ipsum quo accusamus dignissimos perspiciatis
-            officiis? Veritatis hic temporibus sapiente odio, illum blanditiis dolores, tempora rerum animi porro
-            voluptatibus id? Alias.</p>
-        </div>
-    </div> -->
-
-    <!-- / Spacing -->
-
-
     <!-- Navbar -->
 
         <nav class="navbar has-shadow is-white">
@@ -101,6 +34,21 @@
                 </div>
             </div>
         </nav>
+
+
+    <!-- BreadCrumbs -->
+
+    <div class="section pt-4 pb-0">
+        <nav class="breadcrumb container">
+            <ul>
+                <li><a class="has-text-grey">Coffe Ninja</a></li>
+                <li><a class="has-text-grey">Shop</a></li>
+                <li><a class="has-text-grey">Docker Dark Roast</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <!-- / BreadCrumbs -->
 
     <!-- / Navbar -->
 
