Use bulma css classes for content, grid columns.

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 
     <!-- Navbar -->
 
-        <nav class="navbar has-shadow is-white">
-            <!-- logo / brand -->
-            <div class="navbar-brand">
-                <a class="navbar-item"> 
-                    <img src="./common/53b4428cef245.80.jpg" alt="site logo" style="max-height: 70px" class="px-2 py-2">
-                </a>
-                <a class="navbar-burger" id="burger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </a>
-            </div>
+    <nav class="navbar has-shadow is-white">
+        <!-- logo / brand -->
+        <div class="navbar-brand">
+            <a class="navbar-item">
+                <img src="./assets/logo.png" alt="site logo" style="max-height: 70px" class="px-2 py-2">
+            </a>
+            <a class="navbar-burger" id="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+        </div>
 
 
-            <div class="navbar-menu" id="nav-links">
-                <div class="navbar-end">
-                    <a class="navbar-item">My Account</a>
-                    <a class="navbar-item">Shopping Cart (0)</a>
-                </div>
+        <div class="navbar-menu" id="nav-links">
+            <div class="navbar-end">
+                <a class="navbar-item">My Account</a>
+                <a class="navbar-item">Shopping Cart (0)</a>
             </div>
-        </nav>
+        </div>
+    </nav>
 
 
     <!-- BreadCrumbs -->
@@ -52,7 +52,31 @@
 
     <!-- / Navbar -->
 
+    <!-- Product Info -->
+
+    <section class="section">
+        <div class="container">
+            <div class="columns is-vcentered">
+                <div class="column is-3">
+                    <h1 class="is-size-1 title">Docker</h1>
+                    <h2 class="is-size-2 subtitle">Darck Roast</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi a nulla minima quibusdam
+                        reprehenderit ut, harum atque et veritatis officia, id in?</p>
+                </div>
+                <div class="column is-5 has-text-centered">
+                    <img src="./assets/product.png" alt="docker coffe product image" class="px-6">
+                </div>
+                <div class="column is-4">
+                    <div class="is-size-4 mb-4">$10.95</div>
+                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, deserunt.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- / Product Info -->
+
     <script src="./index.js"></script>
 </body>
 
-</html> 
+</html>
