Add message box

--- a/index.html
+++ b/index.html
@@ -107,11 +107,20 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="column is-5-tablet">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident temporibus quidem nostrum
-                        dolore aspernatur maiores. Consectetur modi iste quibusdam minima nam laborum minus temporibus?
-                        Earum inventore aspernatur ducimus quibusdam eum!</p>
+                    <!-- message box -->
+
+                    <div class="message is-dark">
+                        <div class="message-header">
+                            <p>Earn Points with Coffe club</p>
+                        </div>
+                        <div class="message-body">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente maiores mollitia
+                                incidunt rem debitis laborum tenetur in totam nobis tempore culpa, excepturi ducimus
+                                pariatur tempora id dignissimos, qui similique veritatis.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
