Add button and styles for it

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                 <div class="column is-12-tablet is-4-desktop">
                     <div class="is-size-4 mb-4">$10.95</div>
                     <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, deserunt.</p>
+
+                    <button class="button is-primary">Add to cards</button>
+
                 </div>
             </div>
         </div>
@@ -119,6 +122,10 @@
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente maiores mollitia
                                 incidunt rem debitis laborum tenetur in totam nobis tempore culpa, excepturi ducimus
                                 pariatur tempora id dignissimos, qui similique veritatis.</p>
+                        </div>
+
+                        <div class="has-text-centered">
+                            <button class="button mt-5 mb-5">Sing In</button>
                         </div>
                     </div>
                 </div>
